fix: mui hamburger menu color on mobile

--- a/front-end/src/Styles/navBar.css
+++ b/front-end/src/Styles/navBar.css
@@ -61,14 +61,6 @@ nav a {
     color: white;
 }
 
-.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
-    color: white;
-}
-
-.css-i4bv87-MuiSvgIcon-root {
-    color: white;
-}
-
 /* iphone 13 and iphone 13 Pro */
 /* 2532x1170 pixels at 460ppi */
 @media only screen 
@@ -109,14 +101,6 @@ nav a {
         font-size: 20px;
         white-space: inherit;
     }
-
-    .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
-        color: black;
-    }
-    
-    .css-i4bv87-MuiSvgIcon-root {
-        color: black;
-    }
 }
 
 
@@ -151,13 +135,5 @@ nav a {
         color: gray;
         font-size: 20px;
         white-space: inherit;
-    }
-
-    .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
-        color: white;
-    }
-    
-    .css-i4bv87-MuiSvgIcon-root {
-        color: white;
     }
 }
